<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>
    <string name="spotify_toast">This button will launch Spotify Streamer App!</string>
    <string name="scores_toast">This button will launch Scores App!</string>
    <string name="library_toast">This button will launch Library App!</string>
    <string name="build_it_bigger_toast">This button will launch Build It Bigger App!</string>
    <string name="xyz_reader_toast">This button will launch XYZ Reader App!</string>
    <string name="capstone_toast">This button will launch Capstone App!</string>
</resources>
