<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:textSize="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spotifyStreamerButton"
        android:background="@color/orange"
        android:text="@string/spotify_streamer"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spotifyStreamerButton"
        android:id="@+id/scoresAppButton"
        android:layout_alignLeft="@+id/spotifyStreamerButton"
        android:layout_alignRight="@+id/spotifyStreamerButton"
        android:background="@color/orange"
        android:text="@string/scores_app"

        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoresAppButton"
        android:id="@+id/libraryAppButton"
        android:layout_alignLeft="@+id/spotifyStreamerButton"
        android:layout_alignRight="@+id/spotifyStreamerButton"
        android:background="@color/orange"
        android:text="@string/library_app"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buildItBiggerButton"
        android:background="@color/orange"
        android:text="@string/build_it_bigger"
        android:layout_below="@+id/libraryAppButton"
        android:layout_alignLeft="@+id/spotifyStreamerButton"
        android:layout_alignRight="@+id/spotifyStreamerButton"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/xyzReaderButton"
        android:background="@color/orange"
        android:text="@string/xyz_reader"
        android:layout_below="@+id/buildItBiggerButton"
        android:layout_alignLeft="@+id/spotifyStreamerButton"
        android:layout_alignRight="@+id/spotifyStreamerButton"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/capstoneMyOwnAppButton"
        android:background="@color/red"
        android:text="@string/capstone"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/xyzReaderButton"
        android:layout_alignLeft="@+id/spotifyStreamerButton"
        android:layout_alignRight="@+id/spotifyStreamerButton"
        android:textColor="@color/white"/>



</RelativeLayout>
